change oh-my-zsh theme

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,4 +1,35 @@
-# 256色端末を使用する
-set-option -g default-terminal "screen-256color"
-# viのキーバインドを使用する
-set-window-option -g mode-keys vi
+#-------------------------------------
+# キーバインド設定
+#-------------------------------------
+# prefixのキーバインドを変更
+unbind-key    C-b
+set -g prefix C-t
+ 
+# ~/.tmux.confの読み込みキーバインド
+unbind r
+bind   r source-file ~/.tmux.conf \; display-message "tmux RELOADED!!"
+  
+# tmuxセッションをkillする時に下部に確認ダイアログを表示する
+unbind K
+bind   K confirm-before "kill-window"
+
+
+#-------------------------------------
+# 基本設定
+#-------------------------------------
+set -g default-shell /bin/bash
+set -g status on
+set -g status-interval 2
+set -g status-utf8 on
+set -g status-justify "left"
+set -g status-left-length 100
+set -g status-right-length 120
+
+
+# スクロール設定
+set-window-option -g mode-mouse on
+# コピー 
+set -g mode-mouse on
+set -g mouse-resize-pane on 
+set -g mouse-select-pane on
+set -g mouse-select-window on
