--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,35 +1,101 @@
-#-------------------------------------
-# キーバインド設定
-#-------------------------------------
-# prefixのキーバインドを変更
-unbind-key    C-b
-set -g prefix C-t
+# ステータス行更新間隔（1で毎秒更新・既定値15)
+set-option -g status-interval 1
+
+# utf setting
+set-window-option -g utf8 on
+set-window-option -g mode-keys vi
+set-window-option -g automatic-rename off
+
+set -s escape-time 0
+setw -g window-status-current-attr underscore
+
+
+# Prefix変更 C-b -> C-t
+set-option -g prefix C-t
+bind-key C-t send-prefix
+unbind-key C-b
+
+# key bind(windowの移動）
+bind -n left previous-window
+bind -n right next-window
+
+# key bind(paneの移動)
+bind -n S-left select-pane -L
+bind -n S-down select-pane -D
+bind -n S-up select-pane -U
+bind -n S-right select-pane -R
+
+# ペインサイズ変更
+#
+bind-key -r M-Up    resize-pane -U 5
+bind-key -r M-Down  resize-pane -D 5
+bind-key -r M-Left  resize-pane -L 20
+bind-key -r M-Right resize-pane -R 20
+
+# 256色端末を使用する
+set-option -g default-terminal "screen-256color"
  
-# ~/.tmux.confの読み込みキーバインド
-unbind r
-bind   r source-file ~/.tmux.conf \; display-message "tmux RELOADED!!"
-  
-# tmuxセッションをkillする時に下部に確認ダイアログを表示する
-unbind K
-bind   K confirm-before "kill-window"
+set -g pane-active-border-fg white
+set -g pane-active-border-bg black
 
+set-window-option -g mode-bg white
+set-window-option -g mode-fg black
+set-window-option -g window-status-bg black
+set-window-option -g window-status-fg white
+set-window-option -g window-status-current-bg blue
+set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-attr bold
 
-#-------------------------------------
-# 基本設定
-#-------------------------------------
-set -g default-shell /bin/bash
-set -g status on
-set -g status-interval 2
-set -g status-utf8 on
-set -g status-justify "left"
-set -g status-left-length 100
-set -g status-right-length 120
-
-
-# スクロール設定
 set-window-option -g mode-mouse on
-# コピー 
-set -g mode-mouse on
-set -g mouse-resize-pane on 
-set -g mouse-select-pane on
-set -g mouse-select-window on
+
+#  同一のディレクトリを開くようにする 
+bind c new-window -c '#{pane_current_path}'
+# ペイン分割時も同一ディレクトリで開くようにする
+bind '"' split-window -c '#{pane_current_path}'
+bind % split-window -h -c '#{pane_current_path}'
+
+# ステータスラインカスタム関連
+#
+# FYI
+# Status Line · zolrath/wemux Wiki : https://github.com/zolrath/wemux/wiki/Status-Line
+#
+# Macでtmuxのステータスラインに起動時間/ロードアベレージ/メモリ使用率を表示
+# よんちゅBlog : http://d.hatena.ne.jp/yonchu/20120414/1334422075
+set -g status-attr dim
+set -g status-left-length 32
+set -g status-right-length 150
+
+set -g status-fg white
+set -g status-bg colour234
+# set -g window-status-activity-attr bold
+set -g pane-border-fg colour245
+set -g pane-active-border-fg colour39
+
+set -g status-left '#[fg=colour223,bg=colour202,bold]☁ #20(hostname -s)#[deafult] #S #[fg=colour202,bg=colour238,nobold]⮀#[fg=colour245,bg=colour238,bold] #(whoami) #[fg=colour238,bg=colour234,nobold]⮀'
+set -g window-status-format "#[fg=white,bg=colour234] #I #W "
+set -g window-status-current-format "#[fg=colour234,bg=colour39]⮀#[fg=colour25,bg=colour39,noreverse,bold] #I ⮁ #W #[fg=colour39,bg=colour234,bold]⮀"
+# set -g status-right "#(wemux status_users)"
+#
+# 左部:whoami@hostname
+# set -g status-left '#[fg=blue,bold][#20(whoami) No.#I-#P]#[default]'
+# set -g status-left-length 20
+# 右部:[2011/03/06(Sun)20:21]
+set -g status-right '#[fg=colour241]#H ⮃ #I:#P #[fg=colour31,bg=colour234,nobold]⮂#[fg=colour15,bg=colour31] Mem #(used-mem)%% ⮃ LAve.[#(loadaverage)] ⮂#[fg=colour31,bg=colour255,bold] %Y/%m/%d(%a)%H:%M:%S#[default]'
+set -g message-attr bold
+set -g message-fg white
+set -g message-bg red
+
+# percol integration, select tmux window throgh percol
+bind b split-window "tmux lsw | percol --initial-index $(tmux lsw | awk '/active.$/ {print NR-1}') | cut -d':' -f 1 | xargs tmux select-window -t"
+bind B split-window "tmux ls | percol --initial-index $(tmux ls | awk '/attached.$/ {print NR-1}') | cut -d':' -f 1 | xargs tmux switch-client -t"
+
+# plugins
+set -g @tpm_plugins '              \
+  tmux-plugins/tpm                 \
+  tmux-plugins/tmux-resurrect      \
+'
+
+set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-processes 'irb pry "~rails server" "~rails console"'
+
+run-shell '~/.tmux/plugins/tpm/tpm'
