--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -16,8 +16,8 @@ bind-key C-t send-prefix
 unbind-key C-b
 
 # key bind(windowの移動）
-bind -n left previous-window
-bind -n right next-window
+# bind -n left previous-window
+# bind -n right next-window
 
 # key bind(paneの移動)
 bind -n S-left select-pane -L
