--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -51,8 +51,8 @@ set-window-option -g mode-mouse on
 #  同一のディレクトリを開くようにする 
 bind c new-window -c '#{pane_current_path}'
 # ペイン分割時も同一ディレクトリで開くようにする
-bind '"' split-window -c '#{pane_current_path}'
-bind % split-window -h -c '#{pane_current_path}'
+bind '=' split-window -c '#{pane_current_path}'
+bind | split-window -h -c '#{pane_current_path}'
 
 # ステータスラインカスタム関連
 #
