--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,5 +1,6 @@
-# ステータス行更新間隔（1で毎秒更新・既定値15)
-set-option -g status-interval 15
+# ステータスバー関係
+set-option -g status-interval 15 # ステータス行更新間隔（1で毎秒更新・既定値15)
+set-option -g status-position top # ステータスバーをトップに配置
 
 # utf setting
 set-window-option -g utf8 on
@@ -24,9 +25,12 @@ bind -n S-left select-pane -L
 bind -n S-down select-pane -D
 bind -n S-up select-pane -U
 bind -n S-right select-pane -R
+# bind h select-pane -L
+# bind j select-pane -D
+# bind k select-pane -U
+# bind l select-pane -R
 
 # ペインサイズ変更
-#
 bind-key -r M-Up    resize-pane -U 5
 bind-key -r M-Down  resize-pane -D 5
 bind-key -r M-Left  resize-pane -L 20
@@ -51,8 +55,10 @@ set-window-option -g mode-mouse on
 #  同一のディレクトリを開くようにする 
 bind c new-window -c '#{pane_current_path}'
 # ペイン分割時も同一ディレクトリで開くようにする
-bind '"' split-window -c '#{pane_current_path}'
-bind % split-window -h -c '#{pane_current_path}'
+# bind '"' split-window -c '#{pane_current_path}'
+# bind % split-window -h -c '#{pane_current_path}'
+bind - split-window -c '#{pane_current_path}'
+bind \ split-window -h -c '#{pane_current_path}'
 
 # ステータスラインカスタム関連
 #
