--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -10,7 +10,6 @@ set-window-option -g automatic-rename off
 set -s escape-time 0
 setw -g window-status-current-attr underscore
 
-
 # Prefix変更 C-b -> C-t
 set-option -g prefix C-t
 bind-key C-t send-prefix
@@ -50,7 +49,9 @@ set-window-option -g window-status-current-bg blue
 set-window-option -g window-status-current-fg black
 set-window-option -g window-status-current-attr bold
 
-set-window-option -g mode-mouse on
+# set-window-option -g mode-mouse on
+set-option -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 
 #  同一のディレクトリを開くようにする 
 bind c new-window -c '#{pane_current_path}'
