Update .zshrc and aws/config to enhance AWS profile management and prompt display
- Modified .zshrc to show the current AWS profile in the prompt and set a default profile for new terminals.
- Added a new AWS profile 'ws-proto' in aws/config for streamlined SSO access.
- Improved the aws_prompt_info function to dynamically display the active AWS profile in the terminal prompt.

--- a/aws/config
+++ b/aws/config
@@ -44,3 +44,18 @@ sso_account_id = 972588015875
 sso_role_name = Administrator
 region = ap-northeast-1
 output = json
+
+[profile ws-proto]
+sso_session = ws-sso
+sso_account_id = 095055158903
+sso_role_name = Administrator
+region = ap-northeast-1
+output = json
+
+# デフォルトプロファイル (ws-protoを使用)
+[default]
+sso_session = ws-sso
+sso_account_id = 095055158903
+sso_role_name = Administrator
+region = ap-northeast-1
+output = json
