Add new AWS profile for ws-wonder-screen-dev in aws/config
- Introduced a new profile 'ws-wonder-screen-dev' with SSO session, account ID, role name, region, and output format.
- This addition enhances the AWS profile management for development purposes, streamlining access to resources.

--- a/aws/config
+++ b/aws/config
@@ -10,6 +10,13 @@ sso_start_url = https://d-9667642d60.awsapps.com/start
 sso_region = ap-southeast-1
 sso_registration_scopes = sso:account:access
 
+[profile ws-wonder-screen-dev]
+sso_session = ws-sso
+sso_account_id = 871711796323
+sso_role_name = Administrator
+region = ap-northeast-1
+output = json
+
 # Wonder-Screen (Existing) - 現行運用・開発
 # 用途: prototype, dev, demo, prod (Laravel/Legacy)
 [profile ws-wonder-screen]
